# parasail-java

./: .gitignore  CMakeLists.txt  JNIparasail.c  JNIparasail.java  README.md
src/parasail/: Aligner.java  Cigar.java  Example.java  JNIparasail.c  JNIparasail.java  Matrix.java  Profile.java  Result.java
util/: genaligner.py  genjavaimpl.py  genjavanames.py
